refactor: Code cleanup, documentation improvements